--- a/index.html
+++ b/index.html
@@ -41,6 +41,29 @@
       integrity="sha256-S1J4GVHHDMiirir9qsXWc8ZWw74PHHafpsHp5PXtjTs="
       crossorigin="anonymous"
     ></script>
-    <script></script>
+    <script>
+      function fetchSimpsonAPI() {
+        const pokemonId = 1;
+        const url = `https://simpsons-quotes-api.herokuapp.com/quotes`;
+        axios
+          .get(url)
+          .then(function (response) {
+            return response.data[0]; // response.data instead of response.json() with fetch
+          })
+          .then(function (quote) {
+            console.log("data decoded from JSON:", quote);
+            const pokemonHtml = `
+            <p><strong>${quote.character}</strong></p>
+    
+            <img src="${quote.image}" />
+    
+          `;
+
+            document.querySelector("#simpson").innerHTML = pokemonHtml;
+          });
+      }
+
+      fetchSimpsonAPI();
+    </script>
   </body>
 </html>
